- added some comments to the sample json

--- a/sample-project.json
+++ b/sample-project.json
@@ -5,31 +5,36 @@
     "name" : "TASK1",
     "mindays" : 10,
     "maxdays" : 21,
-    "parallelizable" : 2
+    "parallelizable" : 2,
+    "comment" : "task numbers imply nothing"
   },
   {
     "name" : "TASK2",
     "mindays" : 10,
     "maxdays" : 30,
-    "parallelizable" : 2
+    "parallelizable" : 2,
+    "comment" : "two other tasks can be worked in parallel with this task"
   },
   {
     "name" : "TASK3",
     "mindays" : 2,
     "maxdays" : 15,
-    "parallelizable" : 1
+    "parallelizable" : 1,
+    "comment" : "a task can be anything and may involve multiple groups"
   },
   {
     "name" : "TASK4",
     "mindays" : 2,
     "maxdays" : 15,
-    "parallelizable" : 1
+    "parallelizable" : 1,
+    "comment" : "parallelizable should not be more than team size"
   },
   {
     "name" : "TASK5",
     "mindays" : 2,
     "maxdays" : 4,
-    "parallelizable" : 1
+    "parallelizable" : 1,
+    "comment" : "create as many tasks as you need"
   },
   {
     "name" : "TASK6",
@@ -41,7 +46,8 @@
     "name" : "TASK7",
     "mindays" : 3,
     "maxdays" : 10,
-    "parallelizable" : 0
+    "parallelizable" : 0,
+    "comment" : "no other project work can be done in parallel with this task"
   }
 ]
 }
